Make Anubis not log in VTS and reenable logging on the service behinds it. This loses the ability to see what HTTP versions are being used to connect, but allows us to see cache hits and misses again, which is more important.

--- a/conf.d/staging/anubis.conf
+++ b/conf.d/staging/anubis.conf
@@ -17,5 +17,10 @@ more_set_headers "Cross-Origin-Resource-Policy: $upstream_http_cross_origin_reso
 # https://anubis.techaro.lol/docs/admin/environments/nginx
 more_set_input_headers "X-Real-IP: $remote_addr";
 
+# Don't log these requests in VTS
+# Instead we'll only log the backend, this will lose logging what HTTP version is used to connect
+# but restores the ability to see stats on the cache and how well it's performing
+vhost_traffic_status_bypass_stats on;
+
 # Pass to Anubis
 location / { proxy_pass http://anubis_staging; }
