--- a/conf.d/production/sites/breezewiki/base.conf
+++ b/conf.d/production/sites/breezewiki/base.conf
@@ -11,7 +11,7 @@ include conf.d/production/headers/common-headers.conf;
 # Possible options can be found here https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy
 # Browsers will show things that were blocked and what directive blocked them in the console
 # base-uri, frame-ancestors, and form-action don't fall back to default-src
-more_set_headers -t 'text/html' "Content-Security-Policy: default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline' https://static.wikia.nocookie.net; img-src *; font-src 'self' https://static.wikia.nocookie.net; media-src 'self' https://static.wikia.nocookie.net; base-uri 'none'; frame-ancestors 'none'; form-action 'self'";
+more_set_headers -t 'text/html' "Content-Security-Policy: default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline' https://static.wikia.nocookie.net; img-src 'self' https://static.wikia.nocookie.net; font-src 'self' https://static.wikia.nocookie.net; media-src 'self' https://static.wikia.nocookie.net; base-uri 'none'; frame-ancestors 'none'; form-action 'self'";
 
 # Relaxed to allow images from https://static.wikia.nocookie.net to load
 more_set_headers -t 'text/html' 'Cross-Origin-Embedder-Policy: credentialless'; 
